# cider

./: Cider.sh  Dockerfile  README.md  config_default.json  configure.py  mpv.py  pyproject.toml  requirements.txt
bot/: __init__.py  app_vars.py  sound_devices.py  translator.py
bot/TeamTalk/: __init__.py  structs.py
bot/commands/: __init__.py  admin_commands.py  command.py  user_commands.py
bot/config/: models.py
bot/config_ui/: __init__.py  tui.py  wizard.py  wx_ui.py
bot/connectors/: tt_player_connector.py
bot/modules/: uploader.py
bot/services/: yt.py
locale/es/LC_MESSAGES/: Cider.po
locale/hu/LC_MESSAGES/: Cider.po
locale/id/LC_MESSAGES/: Cider.po
locale/pt_BR/LC_MESSAGES/: Cider.po
locale/ru/LC_MESSAGES/: Cider.po
locale/tr/LC_MESSAGES/: Cider.po
systemd/user/: cider.service
tools/: compile_locales.py  libmpv_win_downloader.py  ttsdk_downloader.py  vk_auth.py  yam_auth.py
